2024-03-31 Ajout de commentaires dans le code et correction de la couleur de la scrollbar

--- a/sass/_entete.scss
+++ b/sass/_entete.scss
@@ -1,11 +1,5 @@
-.entete__header {
-    // background-image: url("images/logo.png");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 #entete {
+    // Entête
     background-image: url(images/horizon4.jpg);
     text-align: center;
     background-repeat: no-repeat;
@@ -27,15 +21,17 @@
     }
 }
 
-.entete__header span {
-    display: block;
+.entete__header {
+    // Entête avec marge
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 #entete h1,
 #entete h2,
 #entete h3 {
+    // Titres de l'entête
     margin: 0;
-}
-
-#entete h3 {
-    margin-top: 5rem;
 }
