--- a/sass/utile/_variables.scss
+++ b/sass/utile/_variables.scss
@@ -1,6 +1,7 @@
 :root {
+    // Variables numériques
     --transparence-arriere-contenu: 0.3;
-    --largeur-max-tel: 600px;
+    --largeur-max-tel: 700px;
     --largeur-max-tablette: 900px;
     --flex-basis-haut-de-pli: 1500px;
     --flex-basis-contenu: 1300px;
