--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ Ce thème a été développé dans le cadre du cours 4w4
 
 :root {
   --transparence-arriere-contenu: 0.3;
-  --largeur-max-tel: 600px;
+  --largeur-max-tel: 700px;
   --largeur-max-tablette: 900px;
   --flex-basis-haut-de-pli: 1500px;
   --flex-basis-contenu: 1300px;
@@ -384,7 +384,7 @@ body {
   position: fixed;
   width: 100vw;
   padding: 0 1rem;
-  border-bottom: 1px solid hsl(210, 10%, 95%);
+  border-bottom: 1px solid hsl(210, 90%, 10%);
 }
 
 #menu .entete__contenu {
@@ -428,34 +428,28 @@ body {
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 15px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
+  background: hsl(210, 10%, 95%);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--couleur-arriere-galerie);
+  background: lightgray;
+  height: 80px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--couleur-liens-visited-galerie);
+  background: gray;
 }
 
 /* ////////////////////////////////////////////////////////// */
 /*                    Règles des sections                     */
 /* ////////////////////////////////////////////////////////// */
-.entete__header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 #entete {
   background-image: url(images/horizon4.jpg);
   text-align: center;
@@ -478,18 +472,17 @@ body {
   z-index: 1;
 }
 
-.entete__header span {
-  display: block;
+.entete__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #entete h1,
 #entete h2,
 #entete h3 {
   margin: 0;
-}
-
-#entete h3 {
-  margin-top: 5rem;
 }
 
 .footer__section {
